--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <meta name="twitter:card" content="summary_large_image" /> <!--①-->
 <meta name="twitter:site" content="@yossy11" /> <!--②-->
-<meta property="og:url" content="記事のURL" /> <!--③-->
-<meta property="og:title" content="記事のタイトル" /> <!--④-->
-<meta property="og:description" content="記事の要約（ディスクリプション）" /> <!--⑤-->
+<meta property="og:url" content="https://mallow55.github.io/Mallow-Box/." /> <!--③-->
+<meta property="og:title" content="ShoTaRo's Salon" /> <!--④-->
+<meta property="og:description" content="テストテストテスト" /> <!--⑤-->
 <meta property="og:image" content="https://drive.google.com/file/d/1ohPZcNGuil6YPAEo-QliAiVbPZMbr8Gp/view?usp=sharing"> <!--⑥-->
 
 
