--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:url" content="https://mallow55.github.io/Mallow-Box/." /> <!--③-->
 <meta property="og:title" content="ShoTaRo's Salon" /> <!--④-->
 <meta property="og:description" content="テストテストテスト" /> <!--⑤-->
-<meta property="og:image" content="https://drive.google.com/file/d/1ohPZcNGuil6YPAEo-QliAiVbPZMbr8Gp/view?usp=sharing"> <!--⑥-->
+<meta property="og:image" content="https://images.unsplash.com/photo-1527799820374-dcf8d9d4a388?ixlib=rb-1.2.1&auto=format&fit=crop&w=1171&q=80"> <!--⑥-->
 
 
 <body>
